--- a/libs/eq/CMakeLists.txt
+++ b/libs/eq/CMakeLists.txt
@@ -1,8 +1,6 @@
 # Copyright (c) 2011 Stefan Eilemann <eile@eyescale.ch>
 
-find_package(VMMLIB REQUIRED)
-include_directories(SYSTEM ${OPENGL_INCLUDE_DIR} ${GLEW_MX_INCLUDE_DIRS}
-                           ${VMMLIB_INCLUDE_DIRS})
+include_directories(SYSTEM ${OPENGL_INCLUDE_DIR} ${GLEW_MX_INCLUDE_DIRS})
 if(CUDA_FOUND)
   include_directories(SYSTEM ${CUDA_INCLUDE_DIRS})
 endif()
