Clean up HWLOC CMake code

--- a/libs/eq/client/CMakeLists.txt
+++ b/libs/eq/client/CMakeLists.txt
@@ -22,6 +22,11 @@ if(MAGELLAN_FOUND)
   list(APPEND EQ_LIBRARIES ${MAGELLAN_LIBRARY})
 endif()
 
+if(HWLOC_GL_FOUND)
+  include_directories(${HWLOC_INCLUDE_DIRS})
+  list(APPEND CO_ADD_LINKLIB ${HWLOC_LIBRARIES})
+endif()
+
 if(APPLE)
   if(EQ_AGL_USED)
     find_library(CARBON_LIBRARY Carbon)
