--- a/examples/eqPly/CMakeLists.txt
+++ b/examples/eqPly/CMakeLists.txt
@@ -28,6 +28,7 @@ set(KD_SOURCES
     vertexBufferState.cpp
     vertexData.cpp
 )
+source_group(kdTree FILES ${KD_HEADERS} ${KD_SOURCES})
 
 eq_add_example(eqPly
   HEADERS
@@ -73,6 +74,31 @@ eq_add_example(eqPly
     ${EQUALIZER_ADMIN_LIBRARY}
   )
 
-source_group(kdTree FILES ${KD_HEADERS} ${KD_SOURCES})
-install(FILES rockerArm.ply screwdriver.ply DESTINATION share/Equalizer/data COMPONENT data)
+# create and install .bin files
+if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+  set(BIN_POSTFIX "64.bin")
+else()
+  set(BIN_POSTFIX "32.bin")
+endif()
+if(EQ_BIG_ENDIAN)
+  set(BIN_POSTFIX "be${BIN_POSTFIX}")
+else()
+  set(BIN_POSTFIX "le${BIN_POSTFIX}")
+endif()
+
+set(PLY_FILES rockerArm.ply screwdriver.ply)
+foreach(PLY_FILE ${PLY_FILES})
+  set(BIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/${PLY_FILE}.${BIN_POSTFIX}")
+  add_custom_command(OUTPUT "${BIN_FILE}"
+    COMMAND "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/eqPlyConverter"
+    "${CMAKE_CURRENT_SOURCE_DIR}/${PLY_FILE}"
+    MAIN_DEPENDENCY ${PLY_FILE}
+    DEPENDS eqPlyConverter
+    COMMENT "Creating eqPly kd-Tree for ${PLY_FILE}"
+    )
+  add_custom_target("${PLY_FILE}.${BIN_POSTFIX}" ALL DEPENDS "${BIN_FILE}")
+  install(FILES ${PLY_FILE} ${BIN_FILE} DESTINATION share/Equalizer/data
+    COMPONENT data)
+endforeach()
+
 install(FILES logo.rgb DESTINATION share/Equalizer/data COMPONENT data)
