--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,28 +131,28 @@ if(APPLE)
 endif(APPLE)
 
 if(X11_FOUND)
+  set(EQ_GLX_USED 1)
   if(APPLE)
-    set(CMAKE_INCLUDE_SYSTEM_FLAG_CXX "-isystem ") # Disabled by GNU.cmake!?
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mmacosx-version-min=${EQ_OSX_VERSION}" )
-    set(EQ_AGL_USED 1)
-    set(EQ_GLX_USED 1)
-  else(APPLE)
-    set(EQ_GLX_USED 1)
-  endif(APPLE)
+    link_directories(/usr/X11R6/lib)
+    include_directories(SYSTEM /usr/X11R6/include)
+  endif()
 endif(X11_FOUND)
 
-if(EQ_GLX_USED)
-  include_directories(SYSTEM ${X11_INCLUDE_DIR})
-  set(EQ_FEATURES "${EQ_FEATURES} GLX")
-endif(EQ_GLX_USED)
-if(EQ_AGL_USED)
-  set(EQ_FEATURES "${EQ_FEATURES} AGL")
-endif(EQ_AGL_USED)
-
 if(APPLE)
-  link_directories(/usr/X11R6/lib)
-  include_directories(SYSTEM /usr/X11R6/include)
   add_definitions(-DDarwin)
+  foreach(ARCH CMAKE_OSX_ARCHITECTURES)
+    if(ARCH STREQUAL "ppc" OR ARCH STREQUAL "i386")
+      set(EQ_AGL_USED 1)
+      list(APPEND EQ_EXAMPLES_OSX_ARCHITECTURES ${ARCH})
+    endif()
+  endforeach()
+  if(NOT EQ_EXAMPLES_OSX_ARCHITECTURES)
+    set(EQ_EXAMPLES_OSX_ARCHITECTURES ${CMAKE_OSX_ARCHITECTURES})
+  endif()
+
+  set(CMAKE_INCLUDE_SYSTEM_FLAG_CXX "-isystem ") # Disabled by GNU.cmake!?
+  set(CMAKE_CXX_FLAGS
+    "${CMAKE_CXX_FLAGS} -mmacosx-version-min=${EQ_OSX_VERSION}")
 
   if(CMAKE_OSX_ARCHITECTURES MATCHES "64")
     set(CUDA_FOUND 0)
@@ -161,6 +161,14 @@ if(APPLE)
     set(CUDA_64_BIT_DEVICE_CODE OFF) 
   endif()
 endif(APPLE)
+
+if(EQ_GLX_USED)
+  include_directories(SYSTEM ${X11_INCLUDE_DIR})
+  set(EQ_FEATURES "${EQ_FEATURES} GLX")
+endif(EQ_GLX_USED)
+if(EQ_AGL_USED)
+  set(EQ_FEATURES "${EQ_FEATURES} AGL(32bit)")
+endif(EQ_AGL_USED)
 
 list(APPEND EQ_DEFINITIONS
   -DEQ_BUILD_DIR="${CMAKE_BINARY_DIR}/" -DEQ_SOURCE_DIR="${CMAKE_SOURCE_DIR}/")
