--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -45,6 +45,8 @@ foreach(ARCH ${ALL_OSX_ARCHITECTURES})
   if(INDEX EQUAL -1) # Arch not enabled
     string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
     string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
+    string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_EXE_LINKER_FLAGS
+      ${CMAKE_EXE_LINKER_FLAGS})
   endif()
 endforeach()
 
