Denoise CMake output

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,20 +35,23 @@ else() # installed examples
   endif()
 endif()
 
-set(CMAKE_OSX_ARCHITECTURES ${EQ_EXAMPLES_OSX_ARCHITECTURES})
-message(STATUS "Building examples for ${CMAKE_OSX_ARCHITECTURES}")
+if(APPLE)
+  set(CMAKE_OSX_ARCHITECTURES ${EQ_EXAMPLES_OSX_ARCHITECTURES})
+  message(STATUS "Building examples for ${CMAKE_OSX_ARCHITECTURES}")
 
-# filter out -arch settings from environment (MacPorts...)
-set(ALL_OSX_ARCHITECTURES ppc ppc64 i386 x86_64)
-foreach(ARCH ${ALL_OSX_ARCHITECTURES})
-  list(FIND CMAKE_OSX_ARCHITECTURES ${ARCH} INDEX)
-  if(INDEX EQUAL -1) # Arch not enabled
-    string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-    string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-    string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_EXE_LINKER_FLAGS
-      "${CMAKE_EXE_LINKER_FLAGS}")
-  endif()
-endforeach()
+  # filter out -arch settings from environment (MacPorts...)
+  set(ALL_OSX_ARCHITECTURES ppc ppc64 i386 x86_64)
+  foreach(ARCH ${ALL_OSX_ARCHITECTURES})
+    list(FIND CMAKE_OSX_ARCHITECTURES ${ARCH} INDEX)
+    if(INDEX EQUAL -1) # Arch not enabled
+      string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_CXX_FLAGS
+        "${CMAKE_CXX_FLAGS}")
+      string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
+      string(REGEX REPLACE "-arch ${ARCH}" "" CMAKE_EXE_LINKER_FLAGS
+        "${CMAKE_EXE_LINKER_FLAGS}")
+    endif()
+  endforeach()
+endif()
 
 include(EqStringifyShaders)
 
