Adding -fopenmp to some build steps that require this flag under gcc 4.6.1

--- a/examples/eqPly/CMakeLists.txt
+++ b/examples/eqPly/CMakeLists.txt
@@ -30,6 +30,9 @@ set(KD_SOURCES
 )
 source_group(kdTree FILES ${KD_HEADERS} ${KD_SOURCES})
 
+set_source_files_properties(
+  vertexData.cpp PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
+
 eq_add_example(eqPly
   HEADERS
     cameraAnimation.h
