Refinement of build fix related to OpenMP in gcc 4.6.1

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -55,7 +55,7 @@ endif()
 include(EqStringifyShaders)
 
 function(EQ_ADD_EXAMPLE NAME)
-  parse_arguments(THIS "SOURCES;HEADERS;SHADERS;LINK_LIBRARIES" "" ${ARGN})
+  parse_arguments(THIS "SOURCES;HEADERS;SHADERS;LINK_LIBRARIES;LINK_FLAGS" "" ${ARGN})
 
   eq_stringify_shaders(SHADERS ${THIS_SHADERS})
 
@@ -67,6 +67,10 @@ function(EQ_ADD_EXAMPLE NAME)
   purple_expand_libraries(LINK_LIBRARIES ${EQUALIZER_LIBRARIES}
                           ${THIS_LINK_LIBRARIES})
   target_link_libraries(${THIS_TARGET} ${LINK_LIBRARIES} ${OPENGL_gl_LIBRARY})
+  set_target_properties(${THIS_TARGET} PROPERTIES
+    OUTPUT_NAME ${NAME}
+    LINK_FLAGS "${THIS_LINK_FLAGS}"
+    FOLDER "Examples")
 
   set_target_properties(${THIS_TARGET} PROPERTIES OUTPUT_NAME ${NAME}
                         FOLDER "Examples")
