--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -46,9 +46,9 @@ foreach(DOC ${PUBLIC_DOCS})
   add_dependencies(doxygen_${DOC} ${PREVIOUS})
 
   if(DOC STREQUAL Collage)
-    set(PROJECT_VERSION ${CO_VERSION})
+    set(PROJECT_VERSION ${CO_VERSION_MAJOR}.${CO_VERSION_MINOR})
   else()
-    set(PROJECT_VERSION ${VERSION})
+    set(PROJECT_VERSION ${VERSION_MAJOR}.${VERSION_MINOR})
   endif()
 
   add_custom_target(github_${DOC}
