--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,8 +165,8 @@ install(FILES CMake/FindGLEW_MX.cmake
 if(LUNCHBOX_USE_DNSSD)
   set(EQ_FEATURES "${EQ_FEATURES} zeroconf")
 endif()
-if(GPUSD_FOUND)
-  set(EQ_FEATURES "${EQ_FEATURES} GPUSD")
+if(HWSD_FOUND)
+  set(EQ_FEATURES "${EQ_FEATURES} HWSD")
 endif()
 if(CUDA_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} CUDA")
