Filter network interfaces for subnets (#185)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,9 @@ endif()
 if(CUDA_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} CUDA")
 endif()
+if(QT_QTNETWORK_FOUND)
+  set(EQ_FEATURES "${EQ_FEATURES} QtNetwork")
+endif()
 
 if(MSVC)
   message(STATUS "Configured with${EQ_FEATURES}")
