--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,15 +46,15 @@ foreach(FILE ${TEST_FILES})
     add_executable(${NAME} ${FILE})
     set_target_properties(${NAME} PROPERTIES FOLDER "Tests")
 
-    target_link_libraries(${NAME} lib_Equalizer_shared)
+    target_link_libraries(${NAME} Equalizer)
     if(${NAME} MATCHES "server_.*")
-      target_link_libraries(${NAME} lib_EqualizerServer_shared)
+      target_link_libraries(${NAME} EqualizerServer)
     endif()
     if(${NAME} MATCHES "fabric_.*")
-      target_link_libraries(${NAME} lib_EqualizerFabric_shared)
+      target_link_libraries(${NAME} EqualizerFabric)
     endif()
     if(${NAME} MATCHES "sequel_.*")
-      target_link_libraries(${NAME} lib_Sequel_shared)
+      target_link_libraries(${NAME} Sequel)
     endif()
 
     if(EQUALIZER_RUN_GPU_TESTS OR NOT ${NAME} MATCHES ".*_gpu")
